added password encryption :D